--- a/index.html
+++ b/index.html
@@ -7,24 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
+<div class="background-block">
+    <div class="background-effect">
+    <header>
+        <div class="fixed-button">
+            <button><strong> REGISTER NOW</strong></button>
+          </div>
+    </header>
+      <div class="main">
         <img src="./images/logo.svg"  alt="logo">
-        <h1>FIGAM AFRICA</h1>
-        <h2>International</h2>
-        <h2>Conference</h2>
-        <br>
-        <br>
-        <time>December 6 - 8, 2018</time>
-        <br> <br>
-        <p>Kigali Conference Centre
+        <p>
+            <h1>FIGAM AFRICA</h1>
+            <h2>International</h2>
+            <h2>Conference</h2>
             <br>
-           Kimihurura Roundabout</p>
-        <br>
-        <br>
-        <button><strong> REGISTER NOW</strong></button>
-        <br>
-        <p>*Limited seats available</p>
-    </div>
+            <br>
+            <time>December 6 - 8, 2018</time>
+            <br> <br>
+            <p>Kigali Conference Centre
+            <br>Kimihurura Roundabout</p>
+            <br><br>
+            <button><strong> REGISTER NOW</strong></button>
+            <br>
+            <p>*Limited seats available</p>
+        </p>
+      </div>
+    </div>  
+</div>
     <div class="block-info">
         <h3>OUR CONFERENCES IN NUMBERS</h3>
         <ul>
@@ -49,8 +58,5 @@
             </li>
         </ul>
     </div>
-  <div class="fixed-button">
-    <button><strong> REGISTER NOW</strong></button>
-  </div>
 </body>
 </html>
