--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework #9</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="background-block">
@@ -15,7 +15,7 @@
           </div>
     </header>
       <div class="main">
-        <img src="./images/logo.svg"  alt="logo">
+        <img src="css/images/logo.svg"  alt="logo">
         <p>
             <h1>FIGAM AFRICA</h1>
             <h2>International</h2>
